Bug 44071:admin - Teams : activate/deactivate actions not showing in grid

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -406,3 +406,12 @@ tr.risk {
 .table > :not(:first-child) {
   border-top: none !important;
 }
+
+.switch-action {
+  display: inline-block;
+  position: relative;
+  top: 8px;
+  input {
+    cursor: pointer;
+  }
+}
